pre-wrap fixed

--- a/highlight-js/styles/dracula.css
+++ b/highlight-js/styles/dracula.css
@@ -16,7 +16,6 @@ http://zenorocha.mit-license.org
 
 .hljs {
   display: block;
-  overflow-x: auto;
   padding: 0.5em;
   background: #141414;
 }
